--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <button id="getText">Get Text</button>
+    <button id="getUsers">Get Get Users</button>
     <h2 id="output"></h2>
+    <div id="outputjson"></div>
     <script>
         document.getElementById('getText').addEventListener('click', getText);
+        document.getElementById('getUsers').addEventListener('click', getUsers);
         function getText() {
 
             // fetch('sample.txt')
@@ -27,6 +30,23 @@
             .then((data) => {
                 //display output to html tag
                 document.getElementById('output').innerHTML = data;
+            }).catch((err) => console.log(err))
+        }
+        function getUsers(){
+            fetch('users.json')
+            .then((res) => res.json())
+            .then((data) => {
+                let output = '<h3>Users</h3>';
+                data.forEach(function(user) {
+                    output += `
+                        <ul>
+                            <li>ID: ${user.id}</li>
+                            <li>Name: ${user.name}</li>
+                            <li>Email: ${user.email}</li>
+                        </ul>
+                    `
+                });
+                document.getElementById('outputjson').innerHTML = output;
             })
         }
     </script>
