--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+        crossorigin="anonymous">
     <title>Fetch API Sandbox</title>
 </head>
+
 <body>
-    <button id="getText">Get Text</button>
-    <button id="getUsers">Get Get Users</button>
-    <h2 id="output"></h2>
-    <div id="outputjson"></div>
+    <div class="container">
+        <div class="display mb-4">
+            <h1 class="display mb-4">Fetch API Sandbox</h1>
+            <div class="flex">
+                <button id="getText" class="btn btn-primary">Get Text</button>
+                <button id="getUsers" class="btn btn-succes">Get JSON</button>
+                <button id="getPosts" class="btn btn-warning">Get API DATA</button>
+            </div>
+            <hr>
+            <form id="addPost">
+                <div class="form-group">
+                    <input class="form-control" type="text" id="title" placeholder="Title">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" name="" id="body" placeholder="body"></textarea>
+                </div>
+                <input class="form-control btn btn-primary" type="submit" value="submit">
+            </form>
+            <hr>
+            <h2 id="output"></h2>
+            <div id="outputjson"></div>
+            <div id="outputAPI"></div>
+        </div>
+    </div>
     <script>
         document.getElementById('getText').addEventListener('click', getText);
         document.getElementById('getUsers').addEventListener('click', getUsers);
+        document.getElementById('getPosts').addEventListener('click', getPosts);
+        document.getElementById('addPost').addEventListener('submit', addPost);
+
         function getText() {
 
             // fetch('sample.txt')
@@ -26,29 +53,71 @@
 
             //arrow function
             fetch('sample.txt')
-            .then((res) => res.text())
-            .then((data) => {
-                //display output to html tag
-                document.getElementById('output').innerHTML = data;
-            }).catch((err) => console.log(err))
+                .then((res) => res.text())
+                .then((data) => {
+                    //display output to html tag
+                    document.getElementById('output').innerHTML = data;
+                }).catch((err) => console.log(err))
         }
-        function getUsers(){
+
+        function getUsers() {
             fetch('users.json')
-            .then((res) => res.json())
-            .then((data) => {
-                let output = '<h3>Users</h3>';
-                data.forEach(function(user) {
-                    output += `
+                .then((res) => res.json())
+                .then((data) => {
+                    let output = '<h3>Users</h3>';
+                    data.forEach(function (user) {
+                        output +=
+                            `
                         <ul>
                             <li>ID: ${user.id}</li>
                             <li>Name: ${user.name}</li>
                             <li>Email: ${user.email}</li>
                         </ul>
                     `
-                });
-                document.getElementById('outputjson').innerHTML = output;
-            })
+                    });
+                    document.getElementById('outputjson').innerHTML = output;
+                })
+        }
+
+        function getPosts() {
+            fetch('https://jsonplaceholder.typicode.com/posts')
+                .then((res) => res.json())
+                .then((data) => {
+                    let outputAPI = '<h2>Posts</h2>';
+                    data.forEach(function (post) {
+                        outputAPI +=
+                            `
+                        <div>
+                            <h3>${post.title}</h3>
+                            <p>${post.body}</p>
+                        </div>
+                    `;
+                    });
+                    document.getElementById('outputAPI').innerHTML = outputAPI;
+                })
+        }
+
+        function addPost(e) {
+            e.preventDefault();
+            let title = document.getElementById('title').value;
+            let body = document.getElementById('body').value;
+
+            //post data to json placeholder
+            fetch('https://jsonplaceholder.typicode.com/posts', {
+                    method: 'POST',
+                    headers: {
+                        'Accept': 'application/json, text/plain, */*',
+                        'Content-type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        title: title,
+                        body: body
+                    })
+                })
+                .then((res) => res.json())
+                .then((data) => console.log(data))
         }
     </script>
 </body>
+
 </html>
